--- a/packages/storybook-nuxt/package.json
+++ b/packages/storybook-nuxt/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "@storybook-vue/nuxt",
+  "name": "@raichev-dima/storybook-vue-nuxt",
   "type": "module",
-  "version": "0.2.0",
+  "version": "v0.2.3-alpha.15",
   "packageManager": "pnpm@8.6.12",
   "description": "Storybook for Nuxt and Vite: Develop Vue3 components in isolation with Hot Reloading.",
   "license": "MIT",
-  "homepage": "https://github.com/storybook-vue/storybook-nuxt",
+  "homepage": "https://github.com/raichev-dima/storybook-nuxt",
   "repository": {
     "type": "git",
-    "url": "https://github.com/storybook-vue/storybook-nuxt.git"
+    "url": "https://github.com/raichev-dima/storybook-nuxt.git"
   },
   "bugs": {
-    "url": "https://github.com/storybook-vue/storybook-nuxt/issues"
+    "url": "https://github.com/raichev-dima/storybook-nuxt/issues"
   },
   "keywords": [
     "storybook",
