--- a/packages/storybook-nuxt/package.json
+++ b/packages/storybook-nuxt/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@raichev-dima/storybook-vue-nuxt",
   "type": "module",
-  "version": "v0.2.3-alpha.15",
+  "version": "0.2.3",
   "packageManager": "pnpm@8.6.12",
   "description": "Storybook for Nuxt and Vite: Develop Vue3 components in isolation with Hot Reloading.",
   "license": "MIT",
